--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.3.1",
     "mini-css-extract-plugin": "^0.4.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^2.1.5",
     "postcss-pxtorem": "^4.0.1",
+    "react-router-dom": "^4.3.1",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.8.3",
